# thesis-manager

./: .env  Cargo.toml  README.md  init.sql
src/: lib.rs
src/entity/: mod.rs  prelude.rs  t_admin.rs  t_choose.rs  t_class.rs  t_coach.rs  t_institute.rs  t_major.rs  t_major_limit.rs  t_middle.rs  t_review.rs  t_start.rs  t_student.rs  t_teacher.rs  t_thesis.rs
src/handler/: idl.rs  mod.rs  student.rs
