[package]
name = "thesis_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tower = "0.4"
tower-cookies = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
sea-orm = { version = "0.6.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
jsonwebtoken = "7"
lazy_static = "1"
